--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-DB_HOST = mysql-morfando-inc.alwaysdata.net
-DB_USERNAME = 282957_
-DB_PASSWORD = pierina
-DB_DATABASE = morfando-inc_database
+DB_USERNAME= root
+DB_PASSWORD = nabuco12
+DB_HOST = 127.0.0.1
+DB_DATABASE = morfando
 DB_PORT = 3306
-DB_DIALECT= mysql
+DB_DIALECT = mysql 
