--- a/config/config.json
+++ b/config/config.json
@@ -1,23 +1,23 @@
 {
   "development": {
     "username": "root",
-    "password": "1234",
-    "database": "morfando-inc",
-    "host": "35.224.234.92",
+    "password": "nabuco12",
+    "database": "morfando",
+    "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "test": {
     "username": "root",
-    "password": "1234",
-    "database": "morfando-inc",
-    "host": "35.224.234.92",
+    "password": "nabuco12",
+    "database": "morfando",
+    "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "production": {
     "username": "root",
-    "password": "1234",
-    "database": "morfando-inc",
-    "host": "35.224.234.92",
+    "password": "nabuco12",
+    "database": "morfando",
+    "host": "127.0.0.1",
     "dialect": "mysql"
   }
 }
